fixing form layout issue on tablet landscape view

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1417,6 +1417,3 @@ body {
     @media (max-width: 75em) {
       .book__form {
         width: 65%; } }
-    @media (max-width: 75em) {
-      .book__form {
-        width: 100%; } }
