--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -126,9 +126,6 @@
     @include respond(tab-land) {
       width: 65%;
     }
-    @include respond(tab-land) {
-      width: 100%;
-    }
   }
   
 }
